# aiot-idea-work

./: .gitignore  QUICKSTART.md  README.md
config/: pyproject.toml  requirements.txt
data/edge_impulse/: edge_impulse_csv_generator.py  edge_impulse_data_generator.py  edge_impulse_final_generator.py  edge_impulse_formatter.py
docs/: ESP32_DEPLOYMENT_GUIDE.md  README.md
iot/: actuators.py  adaptive_thresholds.py  config.json  config_manager.py  diagram.json  embedded_ai_converter.py  embedded_ai_model.py  energy.py  integrated_edge_controller.py  main.py  sensors.py  wokwi.toml
model/: main.py
scripts/: deploy_esp32.py  wokwi_manager.py
tests/: test_actuators.py  test_ai_model.py  test_config_manager.py  test_sensors.py
