[project]
name = "adaptive-edge-ai-iot"
version = "2.0.0"
description = "Revolutionary adaptive IoT system with self-learning edge AI - no training required"
authors = [
    { name = "Adaptive AI Team", email = "adaptive@iot.ai" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Home Automation",
    "Topic :: System :: Embedded Systems",
]
keywords = ["adaptive-ai", "edge-computing", "iot", "self-learning", "microcontroller", "esp32", "sensors", "actuators", "no-training"]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "dataclasses-json>=0.5.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

embedded = [
    "micropython-lib",
]

[project.urls]
Homepage = "https://github.com/ryyseeXVI/aiot-idea-work"
Repository = "https://github.com/ryyseeXVI/aiot-idea-work"

[project.scripts]
adaptive-iot = "iot.integrated_edge_controller:main"
convert-embedded = "iot.embedded_ai_converter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iot", "demo"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
